--- a/templates/project.html
+++ b/templates/project.html
@@ -100,3 +100,20 @@
     </div>
 </div>
 {% endblock %}
+
+{% block scripts %}
+<script>
+    $(document).ready(function() {
+        // Initialize Bootstrap 5 modals using jQuery
+        $('#addProjectModal').on('shown.bs.modal', function () {
+            $('#name').trigger('focus');
+        });
+        
+        // Fix for data-toggle and data-target attributes (Bootstrap 5 uses data-bs-*)
+        $('[data-toggle="modal"]').click(function() {
+            var targetModal = $(this).data('target');
+            $(targetModal).modal('show');
+        });
+    });
+</script>
+{% endblock %}
