--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,9 @@
     
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+
+    
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined">
     
     {% block styles %}{% endblock %}
 </head>
