--- a/templates/project.html
+++ b/templates/project.html
@@ -7,7 +7,7 @@
 <div class="container-fluid">
     <div class="d-flex justify-content-between align-items-center mt-4">
         <h1>Vos Projets</h1>
-        <button class="btn btn-light d-flex align-items-center ml-auto" data-bs-toggle="modal" data-bs-target="#addProjectModal">
+        <button class="btn btn-light d-flex align-items-center ml-auto" data-toggle="modal" data-target="#addProjectModal">
             <i class="material-icons-outlined mr-2">add_circle_outline</i> Créer un projet
         </button>
     </div>
@@ -67,7 +67,9 @@
                     <img src="{{ url_for('static', filename='images/Logo-UD.svg') }}" alt="Icon" class="img-fluid mb-4" style="max-width: 200px; border-radius: 20px;">
                     <h5 class="modal-title mt-2" id="addProjectModalLabel"><strong>Démarrez votre aventure avec Mashru3</strong></h5>
                 </div>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
             </div>
             <div class="modal-body">
                 <form action="/add_project" method="POST">
@@ -97,13 +99,4 @@
         </div>
     </div>
 </div>
-{% endblock %}
-
-{% block scripts %}
-<script>
-    $(document).ready(function() {
-        // No need for manual initialization with Bootstrap 5 bundle
-        // The data-bs-toggle and data-bs-target attributes will work automatically
-    });
-</script>
 {% endblock %}
